--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,15 +21,15 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      
-      - shell: powershell
 
       # Runs a single command using the runners shell
       - name: compile
+        shell: powershell
         run: |
           gcc -o test test.c
 
       # Runs a set of commands using the runners shell
       - name: execute
+        shell: powershell
         run: |
           ./test
