--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,13 +24,13 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: compile
-        shell: powershell
+        #shell: powershell
         run: |
           gcc --version
           gcc -o test test.c
 
       # Runs a set of commands using the runners shell
       - name: execute
-        shell: powershell
+        #shell: powershell
         run: |
           ./test
