--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,7 @@ jobs:
       - name: compile
         #shell: powershell
         run: |
+          uname -r
           gcc --version
           gcc -o test test.c
 
